align ment issue fix

--- a/digital-agency/css/custom.css
+++ b/digital-agency/css/custom.css
@@ -957,6 +957,9 @@ section.pricing {
 .how-img {
   text-align: center;
   z-index: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .how-img img {
   width: 40%;
